test/sematest/valid/method_declaration.java
class A {
  public static void main(String[] args) {

  }

  public int A(A[] b, int[][][][] ints){
    return ints[0][0][0][0] * 2;
  }

  public A[] ints(boolean[] b){
    return new A[1];
  }

}