test/sematest/invalid/use_of_void5.java
class A {
  public static void main(String[] args) {

  }

  public void[] A(){

  }
}